[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Options.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Version.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.270588, 0.270588, 0.270588, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.188235, 0.188235, 0.188235, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Options" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 240.0
margin_right = 1368.0
margin_bottom = 768.0
color = Color( 0, 0, 0, 1 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_top = 248.0
margin_right = 342.0
margin_bottom = 366.0
rect_scale = Vector2( 4, 4 )

[node name="MUSIC" type="GridContainer" parent="GridContainer"]
margin_left = 21.0
margin_right = 321.0
margin_bottom = 16.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 6
columns = 3

[node name="Label" type="Label" parent="GridContainer/MUSIC"]
margin_right = 133.0
margin_bottom = 16.0
size_flags_horizontal = 7
text = "Music volume"
align = 1

[node name="Music" type="HSlider" parent="GridContainer/MUSIC"]
margin_left = 137.0
margin_right = 270.0
margin_bottom = 16.0
size_flags_horizontal = 7
min_value = -10.0
max_value = 10.0

[node name="VALUE" type="Label" parent="GridContainer/MUSIC"]
margin_left = 274.0
margin_right = 299.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )
size_flags_horizontal = 0
text = "10"
align = 1

[node name="EFFECTS" type="GridContainer" parent="GridContainer"]
margin_left = 21.0
margin_top = 20.0
margin_right = 321.0
margin_bottom = 36.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 6
columns = 3

[node name="Label" type="Label" parent="GridContainer/EFFECTS"]
margin_right = 133.0
margin_bottom = 16.0
size_flags_horizontal = 7
text = "Effects volume"
align = 1

[node name="Effects" type="HSlider" parent="GridContainer/EFFECTS"]
margin_left = 137.0
margin_right = 270.0
margin_bottom = 16.0
size_flags_horizontal = 7
min_value = -10.0
max_value = 10.0

[node name="VALUE" type="Label" parent="GridContainer/EFFECTS"]
margin_left = 274.0
margin_right = 299.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )
size_flags_horizontal = 0
text = "10"
align = 1

[node name="GridContainer2" type="GridContainer" parent="GridContainer"]
margin_left = 71.0
margin_top = 40.0
margin_right = 271.0
margin_bottom = 64.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6

[node name="Fullscreen" type="CheckBox" parent="GridContainer/GridContainer2"]
margin_left = 51.0
margin_right = 149.0
margin_bottom = 24.0
focus_mode = 0
size_flags_horizontal = 6
enabled_focus_mode = 0
text = "Fullscreen"
align = 1

[node name="Back" type="Button" parent="GridContainer"]
margin_left = 136.0
margin_top = 68.0
margin_right = 206.0
margin_bottom = 88.0
rect_min_size = Vector2( 70, 0 )
focus_mode = 0
size_flags_horizontal = 6
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = "Back"

[node name="Version" parent="." instance=ExtResource( 2 )]
position = Vector2( 8, 727 )

[connection signal="value_changed" from="GridContainer/MUSIC/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="GridContainer/EFFECTS/Effects" to="." method="_on_Effects_value_changed"]
[connection signal="toggled" from="GridContainer/GridContainer2/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="button_up" from="GridContainer/Back" to="." method="_on_Back_button_up"]
